--- a/sdrbase/resources/webapi/index.html
+++ b/sdrbase/resources/webapi/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>SDRangel API documentation</title>
+  <title>RPX-100 API documentation</title>
   <style type="text/css">
   body {
     padding-left: 13em;
@@ -42,9 +42,9 @@
 </ul>
 
 <!-- Main content -->
-<img src="sdrangel_logo.png" alt="SDRangel">
+<img src="OEVSV_small.png" alt="RPX-100">
 
-<h1>SDRangel API documentation</h1>
+<h1>RPX-100 API documentation</h1>
 
 <p>Click on links on the left for various types of documentation</p>
 
