added web docuementation for REST API

--- a/sdrbase/resources/webapi/index.html
+++ b/sdrbase/resources/webapi/index.html
@@ -10,7 +10,7 @@
     background-color: white }
   h1 {
     font-family: Helvetica, Geneva, Arial, SunSans-Regular, sans-serif;
-    color: #6086D3 }
+    color: #000000 }
   ul.navbar {
     list-style-type: none;
     padding: 0;
@@ -37,17 +37,17 @@
 
 <!-- Site navigation menu -->
 <ul class="navbar">
-  <li><a href="doc/html2/index.html">Static HTML2 documentation</a>
+  <li><a href="doc/html2/index.html">Static HTML2 documentation</a></br>
   <li><a href="doc/swagger-ui/index.html">Interactive Swagger UI documentation</a>
 </ul>
 
 <!-- Main content -->
 
-<h1><img src="logo128.png" alt="logo">RPX100 API documentation</h1>
+<h1><img src="logo128.png" alt="logo" style="margin-right:20px; margin-bottom:5px;">RPX-100 API documentation</h1>
 
-<p>Click on links on the left for various types of documentation</p>
+<p>A research project to implement a WRAN transmission protocol for Radio Amateurs based on IEEE802.22 at VHF and UHF bands.</p>
 
-<p>In cooperation with <img src="OEVSV_small.png" alt="RPX100" height="60">
+<p style="text-align: center">In cooperation with <img src="OEVSV_small.png" alt="RPX100" height="60"> and
 <img src="TU.jpg" alt="RPX100" height="60"></p>
 </body>
 </html>
