--- a/sdrbase/resources/webapi/index.html
+++ b/sdrbase/resources/webapi/index.html
@@ -37,17 +37,19 @@
 
 <!-- Site navigation menu -->
 <ul class="navbar">
-  <li><a href="doc/html2/index.html">Static HTML2 documentation</a></br>
+  <li><a href="doc/html2/index.html">Static HTML2 documentation</a></br></br></br>
   <li><a href="doc/swagger-ui/index.html">Interactive Swagger UI documentation</a>
+  <li>In cooperation with
+  <li><img src="OEVSV_small.png" alt="RPX100" height="60">
+  <li>and
+  <li><img src="TU.jpg" alt="RPX100" height="60">
 </ul>
 
 <!-- Main content -->
 
-<h1><img src="logo128.png" alt="logo" style="margin-right:20px; margin-bottom:5px;">RPX-100 API documentation</h1>
+<h1><img src="logo128.png" alt="logo" style="margin-right:20px; margin-bottom:-5px;">RPX-100 API documentation</h1>
 
 <p>A research project to implement a WRAN transmission protocol for Radio Amateurs based on IEEE802.22 at VHF and UHF bands.</p>
 
-<p style="text-align: center">In cooperation with <img src="OEVSV_small.png" alt="RPX100" height="60"> and
-<img src="TU.jpg" alt="RPX100" height="60"></p>
 </body>
 </html>
