align list and text

--- a/sdrbase/resources/webapi/index.html
+++ b/sdrbase/resources/webapi/index.html
@@ -37,13 +37,14 @@
 
 <!-- Site navigation menu -->
 <ul class="navbar">
-  <li><a href="doc/html2/index.html">Static HTML2 documentation</a></br></br></br>
+  <li><a href="doc/html2/index.html">Static HTML2 documentation</a></br></br>
   <li><a href="doc/swagger-ui/index.html">Interactive Swagger UI documentation</a>
 </ul>
 
 <!-- Main content -->
 
-<h1></br><img src="logo128.png" alt="logo" style="margin-right:20px; margin-bottom:-5px;">RPX-100 API documentation</h1>
+</br>
+<h1><img src="logo128.png" alt="logo" style="margin-right:20px; margin-bottom:-5px;">RPX-100 API documentation</h1>
 
 <p>A research project to implement a WRAN transmission protocol for Radio Amateurs based on IEEE802.22 at VHF and UHF bands.</p>
 
