Set copyright and links for Web Rest API

--- a/sdrbase/resources/webapi/index.html
+++ b/sdrbase/resources/webapi/index.html
@@ -10,7 +10,7 @@
     background-color: white }
   h1 {
     font-family: Helvetica, Geneva, Arial, SunSans-Regular, sans-serif;
-    color: #000000 }
+    color: #808B96 }
   ul.navbar {
     list-style-type: none;
     padding: 0;
@@ -20,16 +20,16 @@
     left: 1em;
     width: 11em }
   ul.navbar li {
-    background: #dddddd;
+    background: #D5D8DC;
     margin: 0.5em 0;
     padding: 0.3em;
-    border-right: 1em solid black }
+    border-right: 1em solid #808B96 }
   ul.navbar a {
     text-decoration: none }
   a:link {
-    color: #315db4 }
+    color: #00689C }
   a:visited {
-    color: #315db4 }
+    color: #00689C }
   </style>  
 </head>
 
@@ -37,8 +37,10 @@
 
 <!-- Site navigation menu -->
 <ul class="navbar">
-  <li><a href="doc/html2/index.html">Static HTML2 documentation</a></br></br>
-  <li><a href="doc/swagger-ui/index.html">Interactive Swagger UI documentation</a>
+  <li><a href="doc/html2/index.html">Static HTML2 documentation</a></li>
+  <li><a href="doc/swagger-ui/index.html">Interactive Swagger UI documentation</a></li>
+  <li><a href="https://outofband.info">Out of Band</a></li>
+  </br></br></br>&copy; 2021, Bernhard Isemann, OE3BIA
 </ul>
 
 <!-- Main content -->
@@ -48,10 +50,10 @@
 
 <p>A research project to implement a WRAN transmission protocol for Radio Amateurs based on IEEE802.22 at VHF and UHF bands.</p>
 
-<p style="text-align:justify">In cooperation with
-<img src="OEVSV_small.png" alt="RPX100" height="60">
+<p style="text-align: center">In cooperation with
+<img src="OEVSV_small.png" href="https://www.oevsv.at" alt="OEVSV" height="60">
 and
-<img src="TU.jpg" alt="RPX100" height="60"></p>
+<img src="TU.jpg" href="https://www.tuwien.at" alt="TU Wien" height="60"></p>
 
 </body>
 </html>
