layouting of REST API

--- a/sdrbase/resources/webapi/index.html
+++ b/sdrbase/resources/webapi/index.html
@@ -21,7 +21,7 @@
     width: 11em }
   ul.navbar li {
     background: #D5D8DC;
-    margin: 0.5em 0;
+    margin: 0.4em 0;
     padding: 0.3em;
     border-right: 1em solid #808B96 }
   ul.navbar a {
@@ -39,8 +39,11 @@
 <ul class="navbar">
   <li><a href="doc/html2/index.html">Static HTML2 documentation</a></li>
   <li><a href="doc/swagger-ui/index.html">Interactive Swagger UI documentation</a></li>
-  <li><a href="https://outofband.info">Out of Band</a></li>
-  </br></br></br>&copy; 2021, Bernhard Isemann, OE3BIA
+  <li><a href="https://outofband.info" target="_blank">Out of Band</a></li>
+  </br></br></br>&copy; 2021, OE3BIA
+  </br></br>in cooperation with
+  <img src="OEVSV_small.png" href="https://www.oevsv.at" target="_blank" alt="OEVSV" height="60"></br>and</br>
+  <img src="TU.jpg" href="https://www.tuwien.at" target="_blank" alt="TU Wien" height="60">
 </ul>
 
 <!-- Main content -->
@@ -49,11 +52,6 @@
 <h1><img src="logo128.png" alt="logo" style="margin-right:20px; margin-bottom:-5px;">RPX-100 API documentation</h1>
 
 <p>A research project to implement a WRAN transmission protocol for Radio Amateurs based on IEEE802.22 at VHF and UHF bands.</p>
-
-<p style="text-align: center">In cooperation with
-<img src="OEVSV_small.png" href="https://www.oevsv.at" alt="OEVSV" height="60">
-and
-<img src="TU.jpg" href="https://www.tuwien.at" alt="TU Wien" height="60"></p>
 
 </body>
 </html>
