adjustements of images

--- a/sdrbase/resources/webapi/index.html
+++ b/sdrbase/resources/webapi/index.html
@@ -21,7 +21,7 @@
     width: 11em }
   ul.navbar li {
     background: #D5D8DC;
-    margin: 0.4em 0;
+    margin: 0.3em 0;
     padding: 0.3em;
     border-right: 1em solid #808B96 }
   ul.navbar a {
@@ -41,8 +41,8 @@
   <li><a href="doc/swagger-ui/index.html">Interactive Swagger UI documentation</a></li>
   <li><a href="https://outofband.info" target="_blank">Out of Band</a></li>
   </br></br></br>&copy; 2021, OE3BIA
-  </br></br>in cooperation with
-  <img src="OEVSV_small.png" href="https://www.oevsv.at" target="_blank" alt="OEVSV" height="60"></br>and</br>
+  </br></br>in cooperation with</br>
+  <img src="OEVSV_small.png" href="https://www.oevsv.at" target="_blank" alt="OEVSV" height="100"></br></br>
   <img src="TU.jpg" href="https://www.tuwien.at" target="_blank" alt="TU Wien" height="60">
 </ul>
 
