--- a/sdrbase/resources/webapi/index.html
+++ b/sdrbase/resources/webapi/index.html
@@ -16,7 +16,7 @@
     padding: 0;
     margin: 0;
     position: absolute;
-    top: 2em;
+    top: 3em;
     left: 1em;
     width: 11em }
   ul.navbar li {
@@ -42,8 +42,8 @@
   <li><a href="https://outofband.info" target="_blank">Out of Band</a></li>
   </br></br></br>&copy; 2021, OE3BIA
   </br></br>in cooperation with</br>
-  <img src="OEVSV_small.png" href="https://www.oevsv.at" target="_blank" alt="OEVSV" height="100"></br></br>
-  <img src="TU.jpg" href="https://www.tuwien.at" target="_blank" alt="TU Wien" height="60">
+  <img src="OEVSV_small.png" href="https://www.oevsv.at" target="_blank" alt="OEVSV" height="100" style="margin-left:30px"></br></br>
+  <img src="TU.jpg" href="https://www.tuwien.at" target="_blank" alt="TU Wien" height="60" style="margin-left:30px">
 </ul>
 
 <!-- Main content -->
